# doremi_app_first

./: .env.example  .gitignore  App.tsx  AppContext.tsx  CHANGELOG_phase3.md  CLAUDE.md  FLUX_INTEGRATION_WORKPLAN.md  PIPELINE.md  PROJECT_CONTEXT.md  README.md  appAnalysisPipeline.ts  appCharacterActions.ts  appCutEditActions.ts  appDownloadActions.ts  appFluxPromptEngine.ts  appGenerationActions.ts  appImageEngine.ts  appMiscActions.ts  appNormalizationActions.ts  appPresetValidation.ts  appProjectActions.ts  appReducer.ts  appSafetySanitize.ts  appStyleEngine.ts  appTypes.ts  appUtils.ts  index.css  index.html  index.tsx  metadata.json  package-lock.json  package.json  types.ts  vite.config.ts
components/: ApiKeySettings.tsx  AppInputScreen.tsx  AssetCatalogModal.tsx  AssetCatalogPage.tsx  AssetLibraryModal.tsx  AudioSplitterModal.tsx  BatchAudioModal.tsx  CharacterCard.tsx  CharacterClosetModal.tsx  CharacterStudio.tsx  ContiCutEditor.tsx  CostumeChangeModal.tsx  CutAssignmentModal.tsx  CutPreviewModal.tsx  CutSelectionModal.tsx  CutSplitterModal.tsx  EnlargedCutModal.tsx  EnrichedScriptEditor.tsx  ImageEditorModal.tsx  ImageStudio.tsx  ImageViewerModal.tsx  LoraRegistryModal.tsx  MaskingCanvas.tsx  ProjectListModal.tsx  ProportionStudioModal.tsx  SceneAnalysisReviewModal.tsx  SceneCard.tsx  Sidebar.tsx  SlideshowModal.tsx  StoryboardReviewModal.tsx  StyleSelectionModal.tsx  TextEditorModal.tsx  ThirdCharacterStudioModal.tsx  (+3 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+19 files in other folders)
